# Used_car_price_predictions-

./: Dockerfile  Makefile  README.md  pyproject.toml
configs/: config.yaml
models/: lgb_model.pkl
notebooks/: Project.ipynb
outputs/2025-05-29/01-16-19/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-29/01-17-47/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-29/01-19-48/.hydra/: hydra.yaml
outputs/2025-05-29/01-27-13/.hydra/: hydra.yaml
outputs/2025-05-29/01-30-37/.hydra/: hydra.yaml
outputs/2025-05-29/01-33-08/.hydra/: hydra.yaml
outputs/2025-05-29/01-34-59/.hydra/: hydra.yaml
outputs/2025-05-29/01-36-47/.hydra/: hydra.yaml
outputs/2025-05-29/01-37-18/.hydra/: hydra.yaml
outputs/2025-05-29/01-40-47/.hydra/: hydra.yaml
outputs/2025-05-29/01-50-43/.hydra/: hydra.yaml
outputs/2025-05-29/01-52-17/.hydra/: hydra.yaml
outputs/2025-05-29/01-55-03/.hydra/: hydra.yaml
outputs/2025-05-29/01-57-28/.hydra/: hydra.yaml
outputs/2025-05-29/02-01-29/.hydra/: hydra.yaml
outputs/2025-05-29/02-11-56/.hydra/: hydra.yaml
outputs/2025-05-29/02-12-29/.hydra/: hydra.yaml
src/: data_load.py  eda.py  main.py  predict.py  preprocess.py  server.py  train.py  validation.py
