[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ds_car_price"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "raghad" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "hydra-core>=1.3.2",
    "lightgbm>=4.6.0",
    "pandas>=2.2.3",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ds_car_price"]
include = ["pyproject.toml", "ds_car_price/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ds_car_price"]
force-sort-within-sections = true

